--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Text Editor</title>
-    <link href='/style.css' rel='stylesheet'>
+    <link href='style.css' rel='stylesheet'>
   </head>
   <body>
     <div class="container">
       <textarea name="text" class="textbox" id="textbox"></textarea>
       <button class="download-btn" onclick="downloadFile()">Download</button>
     </div>
-    <script defer type="text/javascript" src="/main.js"></script>
+    <script defer type="text/javascript" src="main.js"></script>
   </body>
 </html>
