Change Download to Save

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
     <link rel="icon" href="icon.png">
     <link rel="apple-touch-icon" href="icon.png">
-    
+
     <link href='style.css' rel='stylesheet'>
   </head>
   <body>
     <div class="container">
       <textarea name="text" class="textbox" id="textbox"></textarea>
-      <button class="download-btn" onclick="downloadFile()">Download</button>
+      <button class="save-btn" onclick="saveFile()">Save</button>
     </div>
     <script defer type="text/javascript" src="main.js"></script>
   </body>
