--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   <body>
     <div class="container">
       <textarea name="text" class="textbox" id="textbox"></textarea>
-      <button class="save-btn" onclick="saveFile()">Save</button>
+      <div class="side-btns">
+        <button class="open-btn side-btn" onclick="openFile()">Open</button>
+        <button class="save-btn side-btn" onclick="saveFile()">Save</button>
+      </div>
     </div>
     <script defer type="text/javascript" src="main.js"></script>
   </body>
