--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link href='style.css' rel='stylesheet'>
   </head>
   <body>
+    <div class="side-bar">
+      <button class="open-btn side-btn" onclick="openFile()">Open</button>
+      <button class="save-btn side-btn" onclick="saveFile()">Save</button>
+    </div>
     <div class="container">
       <textarea name="text" class="textbox" id="textbox"></textarea>
-      <div class="side-btns">
-        <button class="open-btn side-btn" onclick="openFile()">Open</button>
-        <button class="save-btn side-btn" onclick="saveFile()">Save</button>
-      </div>
     </div>
     <script defer type="text/javascript" src="main.js"></script>
   </body>
